--- a/index.html
+++ b/index.html
@@ -32,64 +32,8 @@
 						</div>
 					</section>
 
-				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
-						<div class="content">
-							<h2>Data Cleaning in SQL</h2>
-							<p>This project cleans housing data in SQL server.</p>
-							<ul class="actions stacked">
-								<li><a href="https://github.com/JanYang6/PortfolioProjects/blob/main/SQL%20Data%20Cleaning%20Project.pdf" class="button">View Project</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/housing.jpg" alt="" />
-						</div>
-					</section>
-
-				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<h2>Data Exploration in SQL</h2>
-							<p>This project explores Covid 19 data in SQL server.</p>
-							<ul class="actions stacked">
-								<li><a href="https://github.com/JanYang6/PortfolioProjects/blob/main/SQL%20Data%20Exploration%20Project.pdf" class="button">View Project</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/covid.jpg" alt="" />
-						</div>
-					</section>
-
-				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<h2>Movie Correlation with Python</h2>
-							<p>This project looks at what variables effect the movie gross revenue.</p>
-							<ul class="actions stacked">
-								<li><a href="https://github.com/JanYang6/PortfolioProjects/blob/main/Movie%20Correlation%20Project.pdf" class="button">View Project</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/movies.jpeg" alt="" />
-						</div>
-					</section>
-
-				<!-- Five -->
-				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
-					<div class="content">
-						<h2>Web Scrapping with Python</h2>
-						<p>This project scrapes data from Amazon website to analyze product prices.</p>
-						<ul class="actions stacked">
-							<li><a href="https://github.com/JanYang6/PortfolioProjects/blob/main/Amazon%20Web%20Scraper%20Project.pdf" class="button">View Project</a></li>
-						</ul>
-					</div>
-					<div class="image">
-						<img src="images/amazon.png"  style="object-fit: cover" alt="" />
-					</div>
-				</section>
-
 				<!-- Six -->
-				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 					<div class="content">
 						<h2>Data Visualization in Tableau</h2>
 						<p>This project creates an Airbnb dashboard in Tableau.</p>
@@ -130,6 +74,62 @@
 					</div>
 				</section>
 
+				<!-- Three -->
+				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<div class="content">
+						<h2>Data Exploration in SQL</h2>
+						<p>This project explores Covid 19 data in SQL server.</p>
+						<ul class="actions stacked">
+							<li><a href="https://github.com/JanYang6/PortfolioProjects/blob/main/SQL%20Data%20Exploration%20Project.pdf" class="button">View Project</a></li>
+						</ul>
+					</div>
+					<div class="image">
+						<img src="images/covid.jpg" alt="" />
+					</div>
+				</section>
+
+			<!-- Two -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Data Cleaning in SQL</h2>
+							<p>This project cleans housing data in SQL server.</p>
+							<ul class="actions stacked">
+								<li><a href="https://github.com/JanYang6/PortfolioProjects/blob/main/SQL%20Data%20Cleaning%20Project.pdf" class="button">View Project</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/housing.jpg" alt="" />
+						</div>
+					</section>
+
+				<!-- Five -->
+				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<div class="content">
+						<h2>Web Scrapping with Python</h2>
+						<p>This project scrapes data from Amazon website to analyze product prices.</p>
+						<ul class="actions stacked">
+							<li><a href="https://github.com/JanYang6/PortfolioProjects/blob/main/Amazon%20Web%20Scraper%20Project.pdf" class="button">View Project</a></li>
+						</ul>
+					</div>
+					<div class="image">
+						<img src="images/amazon.png"  style="object-fit: cover" alt="" />
+					</div>
+				</section>
+
+				<!-- Four -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Movie Correlation with Python</h2>
+							<p>This project looks at what variables effect the movie gross revenue.</p>
+							<ul class="actions stacked">
+								<li><a href="https://github.com/JanYang6/PortfolioProjects/blob/main/Movie%20Correlation%20Project.pdf" class="button">View Project</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/movies.jpeg" alt="" />
+						</div>
+					</section>
+
 				<!-- Nine -->
 				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 					<div class="content">
@@ -168,7 +168,7 @@
 						</ul>
 					</div>
 					<div class="image">
-						<img src="images/machine learning.jpeg"  style="object-fit: cover" alt="" />
+						<img src="images/machine learning.jpg"  style="object-fit: cover" alt="" />
 					</div>
 				</section>
 
